# wps

./: .dockerignore  .env  .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .pylintrc  .sonarcloud.properties  .yo-rc.json  CHANGELOG.md  COMPLIANCE.yaml  CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cogs  Dockerfile.html  Dockerfile.jobs  Dockerfile.nats  Dockerfile.node.p1  Dockerfile.ocp3  Dockerfile.python.p1  Dockerfile.test  Dockerfile.tileserv  Dockerfile.ubuntu  Dockerfile.vscode  Dockerfile.web  FBA.md  Jenkinsfile  Makefile  Pipfile  README.md  action.yml  alembic.ini  api.dev.Dockerfile  auth.py  bcgovpubcode.yml  biome.json  codecov.yml  config.py  (+33 more)
api/: .coveragerc  .dockerignore  .pylintrc  Dockerfile  HFI_spreadsheet.md  HumanFireStarts_DataWrangling.ipynb  Makefile  README.md  alembic.ini  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  firestarts.mk  machine weather.ipynb  poetry_setup.sh  prestart.sh  pyproject.toml  rendered_template.html  sitecustomize.py  start.sh  start_sfms.sh
api/advisory/: README.md  advisory_area.sql  calculate_advisories.py  calculate_combustible_land_area.py  calculate_combustible_land_area_old.py  classify_hfi.py  polygonize_geotiff.py  polygonize_hfi.py
api/advisory/db/: crud.py
api/alembic/: env.py
api/alembic/vernon_area_prototype/: VernonFZBATPolys.dbf  VernonFZBATPolys.sbn  VernonFZBATPolys.sbx  VernonFZBATPolys.shp  VernonFZBATPolys.shp.xml  VernonFZBATPolys.shx  vernon_thessians.geojson
api/alembic/versions/: 004ac48ffe18_indices.py  00df3c7b5cba_rethink_classification.py  025a81a4b7bd_limit_mat_view_to_21_days.py  04bc7be60b4f_recompute_combustible_area.py  05d1dd3062b4_make_observation_fields_nullable.py  07007f659064_partition_weather_station_model_.py  08799237842e_create_advisory_hfi_percent_conifer_.py  0882ed72ca2b_reimport_zones_for_new_ids.py  0961883640ef_simplify_high_hfi_area.py  0a3db9ff0c22_forecast_model_update.py  0dd8306467a9_add_sfmsfueltype_data.py  0eb9e7f65a50_populate_fuel_type_raster_id_fk_.py  0f9913be0033_warn_advisory_one_record.py  10560b37a029_forecast_model_update.py  1161fab52ef5_revise_some_fuel_types.py  11b821827824_thessian_polygon_table.py  144eb6a781dd_add_advisory_tpi_table.py  14c8b2299d5f_hfi_overrides.py  151ec4aa0b32_threshold_id_data_import_for_min_win_.py  157ba3a3f3fb_remove_unique_station_per_planning_area_.py  16386a52d7bf_update_c7b.py  17b1c787f420_advisory_areas.py  1caf3488a340_initial_hfi_data_import.py  1fcbb3d89818_data_migration_for_default_hfi_ready_.py  2140341e63f0_add_nullable_daily_uuid_to_morecast2_.py  2169aa76dfea_add_haida_gwaii_zone_to_cofc.py  2442f07d975c_singular_value_weather_model_prediction_.py  25b07f9414cb_add_fire_watch_weather_table.py  274bec360d8c_order_planning_areas_in_kfc.py  29d76dba2f62_calculate_advisory_shape_fuel_types_.py  2b3755392ad8_percent_grass_curing.py  2ca7085c412b_thessian_polygon_table.py  2cc32257e8bc_rethink_classification.py  2cf10021c5f1_add_hfi_wind_speed_table.py  2d62ca4e4804_chaines_poly.py  2dac381ad6e7_remove_moose_lake_from_nadina.py  304daefe5f80_import_vernon_thessian_polygons.py  305e64ecce19_combustible_area_2021_and_2025.py  318e6887e4b0_hfi_request.py  353773d17996_adds_audit_model.py  (+150 more)
api/app/: .env.example  BUILD  __init__.py  app_nats.py  auth.py  common.ipynb  config.py  dependency.py  fba_calculator.py  fire_centers.py  fireweather_bot.py  frontend.py  geospatial.py  health.py  hfi_calc.py  hourlies.py  jinja.py  logging.json  main.py  minio_utils.py  nats.py  nats_publish.py  noon_forecasts.py  openpyxl.ipynb  orjson_response.py  peak_burniness.py  percentile.py  pytest.ini  rocketchat_notifications.py  sample.html  sample.xlsx  schemas.py  sfms.py  stations.py  time_utils.py  wildfire_one.py
api/app/advisory/: calculate_advisories.py
api/app/alt_test/: test_rocketchat_notifications.feature  test_thing.py
api/app/analysis/: README.md  data_analysis.py  hourly_maxes.py
api/dev_tools/: env_canada_scraper.py
api/junk/: geotiff.ipynb  hfi.ipynb
api/scripts/: BUILD  C-Haines.ipynb  FBCCalc_input.json  FBCCalc_output.json  access_to_csv.py  backup_to_s3.sh  bc_into_albers_grid.py  calculate_percentile_offline.py  classify_hfi.py  common_oc_checks.sh  convert_filename_timestamp_to_code.py  copy_db_from_pod_to_local.py  copy_db_from_pod_to_local.sh  copy_dem.py  copy_partial_db_from_pod_to_local.sh  database_size_report.sh  dem_to_compressed_rgb.py  extract_sentry_user_emails.py  fetch_feature_layer.py  get_dailies.py  get_hourlies.py  lookup.py  machine.py  make_test_files.py  manual_pr_cleanup.sh  migrate_polygons.py  percentile_scratch.py  polygonize_hfi.py  process_dem.py  restore_db.sh  restore_db_backup_ubuntu.sh  roberto_roboto.py  ros_lookup.py  split_test_training_data.py  station_csv_to_json.py  tiff_to_rgb.py
api/static/: config.js  index.html  jinja.html  placeholder.txt
backend/wps-weather/: pyproject.toml
cogtiler/: .env.example  Makefile  cog.ipynb  pyproject.toml
cogtiler/cogtiler/: main.py  util.py
cogtiler/tests/: test_cogtiler.py
common/: common  envars  pyproject.toml
common/common/: config.py
ec_subscriber/: Dockerfile  download.conf  entrypoint.sh  main.py  pyproject.toml
fire_boundaries/: Makefile  README.md  earth engine.ipynb  pyproject.toml
fire_boundaries/fire_boundaries/: client.py
fire_boundaries/tests/: test_fire_boundaries.py
tileserv/: .env.example  Dockerfile  __init__.py  alembic.ini  db.py  pyproject.toml  seed_fire_layer.py  start.sh
tileserv/alembic/: env.py
tileserv/models/: __init__.py  base.py
tileserv/tools/: .env  .env.example  s3.py  sfms_generator.py  tif_pusher.py  time.py
workers/: Makefile  README.md  docker-compose.yml  import.sh  pyproject.toml
workers/workers/: esri.py  fetch_feature_layer.py  fetch_zones.py
wps_jobs/: pyproject.toml
wps_jobs/tests/: conftest.py  test_fuel_raster.py
wps_jobs/wps_jobs/: fuel_raster.py
wps_shared/: pyproject.toml
wps_shared/wps_shared/: auth.py  config.py  fuel_raster.py  fuel_types.py  logging.json  logging.py  wps_logging.py
(+7619 files in other folders)
