[tool.poetry]
name = "wps-api"
version = "0.1.0"
description = "Wildfire Predictive Services Unit API"
authors = ["Sybrand Strauss <sybrand.strauss@gov.bc.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
requests = "^2.24.0"
aiodns = "^2.0.0"
aiohttp = "^3.6.2"
pandas = "^1.1.0"
pyjwt = "^1.7.1"
cryptography = "^3.0"
sqlalchemy = "^1.3.18"
psycopg2 = "^2.8.5"
postgres = "^3.0.0"
python-decouple = "^3.3"
uvicorn = "^0.11.7"
geopandas = "^0.8.1"
pylint = "^2.5.3"
alembic = "^1.4.2"
scipy = "^1.5.2"
geoalchemy2 = "^0.8.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
jupyter = "^1.0.0"
notebook = "^6.0.3"
alchemy-mock = "^0.4.3"
pytest_bdd = "^3.4.0"
coverage = "^5.1"
pycodestyle = "^2.6.0"
autopep8 = "^1.5.3"
matplotlib = "^3.2.2"
pytest-xdist = "^1.33.0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
