[tool.poetry]
name = "wps-api"
version = "0.1.0"
description = "Wildfire Predictive Services Unit API"
authors = ["Sybrand Strauss <sybrand.strauss@gov.bc.ca>"]

[tool.poetry.dependencies]
python = ">=3.10.4,<3.11"
fastapi = "^0"
requests = "^2"
aiodns = "^3"
aiohttp = "^3"
pandas = "^1"
pyjwt = "^2"
cryptography = "^39.0"
sqlalchemy = "^1"
psycopg2 = "^2"
postgres = "^4"
python-decouple = "^3"
uvicorn = "^0"
geopandas = "^0"
pylint = "^2"
alembic = "^1"
requests_ntlm = "^1"
scipy = "^1"
geoalchemy2 = "^0"
aiofiles = "^22"
jinja2 = "^3"
numpy = "^1.21.1"
aiobotocore = "^2.0.0"
rpy2 = "^3.4.5"
redis = "^4.0.0"
pyjnius = "^1.3.0"
hiredis = "^2.0.0"
pdfkit = "^1.0.0"
asyncpg = "^0.27.0"
python-multipart = "^0.0.5"
gunicorn = "^20.1.0"
setuptools = "^66.0.0"
nats-py = "^2.1.7"
affine = "^2.3.1"
rasterio = "^1.3.2"
scikit-learn = "^1.1.3"
httpx = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7"
jupyter = "^1"
notebook = "^6"
pytest_bdd = "^5"
coverage = "^6"
pycodestyle = "^2"
autopep8 = "^2"
matplotlib = "^3"
pytest-xdist = "^3"
pytest-mock = "^3"
rope = "^1"
jsonpickle = "^3.0.0"
pytest-watch = "^4.2.0"
pytest-testmon = "^1.2.3"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
