[tool.poetry]
name = "wps-api"
version = "0.1.0"
description = "Wildfire Predictive Services Unit API"
authors = ["Sybrand Strauss <sybrand.strauss@gov.bc.ca>"]

[tool.poetry.dependencies]
python = ">=3.10.4,<3.11"
fastapi = "^0"
requests = "^2"
aiodns = "^3"
aiohttp = "^3"
pandas = "^1"
pyjwt = "^2"
cryptography = "^41.0.2"
sqlalchemy = "^2"
psycopg2 = "^2"
postgres = "^4"
python-decouple = "^3"
uvicorn = "^0"
geopandas = "^0"
alembic = "^1"
requests_ntlm = "^1"
scipy = "^1"
geoalchemy2 = "^0"
aiofiles = "^23"
jinja2 = "^3"
numpy = "^1.21.1"
aiobotocore = "^2.0.0"
rpy2 = "^3.4.5"
redis = "^4.5.4"
pyjnius = "^1.3.0"
hiredis = "^2.0.0"
pdfkit = "^1.0.0"
asyncpg = "^0.28.0"
python-multipart = "^0.0.6"
gunicorn = "^20.1.0"
setuptools = "^68.0.0"
nats-py = "^2.1.7"
affine = "^2.3.1"
rasterio = "^1.3.2"
scikit-learn = "^1.1.3"
httpx = "^0.24.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
jupyter = "^1"
notebook = "^7.0.0"
pytest_bdd = "^5"
coverage = "^6"
pycodestyle = "^2"
autopep8 = "^2"
matplotlib = "^3"
pytest-xdist = "^3"
pytest-mock = "^3"
rope = "^1"
jsonpickle = "^3.0.0"
pytest-watch = "^4.2.0"
pytest-testmon = "^2.0.0"
ruff = "^0.0.280"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"

[tool.ruff]
per-file-ignores = { "alembic/versions/00df3c7b5cba_rethink_classification.py" = [
    "E501",
], "alembic/versions/39806f02cdec_wfwx_update_date_part_of_unique_.py" = [
    "E501",
], "alembic/versions/56916d46d8cb_high_hfi_area.py" = [
    "E501",
], "alembic/versions/ac65354014bd_remove_bear_lake_station.py" = [
    "E501",
], "app/auto_spatial_advisory/db/database/tileserver.py" = [
    "E501",
], "app/tests/fba_calc/test_fba_error.py" = [
    "E501",
], "app/tests/hfi/test_hfi.py" = [
    "F811",
], "app/auto_spatial_advisory/nats_consumer.py" = [
    "F811",
], "app/tests/hfi/test_pdf_formatter.py" = [
    "F811",
], "app/tests/hfi/test_pdf_generator.py" = [
    "F811",
], "app/tests/weather_models/test_env_canada_gdps.py" = [
    "F811",
], "app/db/models/__init__.py" = [
    "F401",
    "E402",
    "F811",
] }
line-length = 185
ignore = ["E712"]
