[tool.poetry]
name = "wps-api"
version = "0.1.0"
description = "Wildfire Predictive Services Unit API"
authors = ["Sybrand Strauss <sybrand.strauss@gov.bc.ca>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.3,<4.0"
fastapi = "^0"
requests = "^2"
aiodns = "^3"
aiohttp = "^3"
pandas = "^2"
pyjwt = "^2"
cryptography = "^46.0.0"
sqlalchemy = "^2"
psycopg2 = "^2"
postgres = "^4"
python-decouple = "^3"
uvicorn = "^0"
alembic = "^1"
requests_ntlm = "^1"
scipy = "^1"
geoalchemy2 = "^0"
aiofiles = "^25.0.0"
jinja2 = "^3"
numpy = "2.1"
aiobotocore = "^2.0.0"
rpy2 = "^3.4.5"
redis = "^7.0.0"
pyjnius = "^1.3.0"
hiredis = "^3.0.0"
pdfkit = "^1.0.0"
asyncpg = "^0.30.0"
python-multipart = "^0.0.18"
gunicorn = "^23.0.0"
setuptools = "^80.0.0"
nats-py = "^2.1.7"
affine = "^2.3.1"
scikit-learn = "^1.1.3"
httpx = "^0.27.0"
orjson = "^3.9.0"
greenlet = "^3.0.0"
sentry-sdk = { extras = ["fastapi"], version = "^2.0.1" }
numba = "0.61"
cffdrs = { git = "https://github.com/cffdrs/cffdrs_py.git", rev = "c760307" }
geopandas = "^1.0.1"
shapely = "^2.0.5"
wps-shared = { path = "../wps_shared" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
jupyter = "^1"
notebook = "^7.0.7"
coverage = "^7.6.4"
pycodestyle = "^2"
autopep8 = "^2"
matplotlib = "^3"
pytest-xdist = "^3"
pytest-mock = "^3"
rope = "^1"
pytest-watch = "^4.2.0"
pytest-testmon = "^2.0.0"
ruff = "^0.11.5"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
