[tool.poetry]
name = "fire_boundaries"
version = "0.1.0"
description = ""
authors = ["Sybrand Strauss <sybrand.strauss@gov.bc.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.48.0"
PyJWT = "^2.4.0"
cryptography = "^37.0.2"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
