[tool.poetry]
name = "wps-workers"
version = "0.1.0"
description = "Scripts to assist fetching features"
authors = ["Sybrand Strauss <sybrand.strauss@gov.bc.ca>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
psycopg2 = "^2.9.2"
GeoAlchemy2 = "^0.9.4"
Shapely = "^1.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
