[tool.poetry]
name = "wps-shared"
version = "0.1.0"
description = ""
authors = ["Darren Boss <darren.boss@gov.bc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.3,<4.0"
sqlalchemy = "^2"
aiohttp = "^3"
requests = "^2"
python-decouple = "^3"
geopandas = "^1.0.1"
shapely = "^2.0.5"
pydantic = "^2.10.6"
aiobotocore = "^2.0.0"
geoalchemy2 = "^0"
affine = "^2.4.0"
fastapi = "^0.115.11"
sentry-sdk = "^2.22.0"
pyjwt = "^2.10.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
redis = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3"
coverage = "^7.6.4"
ruff = "^0.11.5"
testcontainers = { extras = ["postgres"], version = "^4.10.0" }
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
