[tool.poetry]
name = "s3-backup"
version = "0.1.0"
description = "Prune backup images"
authors = ["Sybrand Strauss <sybrand.strauss@gov.bc.ca>"]
license = "Apache License, Version 2.0, January 2004"

[tool.poetry.dependencies]
python = ">=3.6.8,<=3.6.15"
aiobotocore = "^2.0.0"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
