[project]
name = "s3-backup"
version = "0.1.0"
description = "Prune backup images"
authors = [{ name = "Sybrand Strauss", email = "sybrand.strauss@gov.bc.ca" }]
license = { text = "Apache License, Version 2.0, January 2004" }
requires-python = ">=3.11.2"
dependencies = ["aiobotocore>=2.0.0,<3.0.0", "python-decouple>=3.5,<4.0.0"]

[dependency-groups]
dev = ["pytest>=9.0.0,<10.0.0", "ruff>=0.6.8,<0.7.0"]
